fixed dark mode

--- a/src/styles/SqlEditor.module.css
+++ b/src/styles/SqlEditor.module.css
@@ -2,6 +2,7 @@
 .lightMode {
   --background-color: #f5f5f5;
   --text-color: #333;
+  --editor-bg-color: #ffffff;
   --sidebar-bg-color: #ffffff;
   --border-color: #ddd;
   --highlight-color: #007acc;
@@ -15,6 +16,7 @@
 .darkMode {
   --background-color: #1e1e1e;
   --text-color: #e0e0e0;
+  --editor-bg-color: #1E1E1E;
   --sidebar-bg-color: #2c2c2c;
   --border-color: #444;
   --highlight-color: #569cd6;
@@ -138,7 +140,7 @@
 
 .editorToolbar {
   display: flex;
-  gap: 10px;
+  /* gap: 10px; */
   height: 50px;
 }
 
@@ -147,16 +149,18 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: var(--sidebar-bg-color);
+  background-color: var(--editor-bg-color);
   border-right: 1px solid var(--border-color);
 }
 
 .editorActions {
+  background-color: var(--sidebar-bg-color);
   display: flex;
   gap: 10px;
   padding-top: 10px;
   padding-bottom: 10px;
-  width: calc(100% - 100px);
+  padding-right: 20px;
+  width: calc(100% - 80px);
   justify-content: end;
   align-items: center;
 }
@@ -177,7 +181,7 @@
 
 .runButton {
   background-color: var(--highlight-color) !important;
-  color: var(--text-color) !important;
+  color: white !important;
   border: none;
   display: flex;
   align-items: center;
@@ -297,8 +301,8 @@
 
 .resultHeader {
   height: 50px;
-  width: 100px;
-  background-color: var(--sidebar-bg-color);
+  width: 80px;
+  background-color: var(--editor-bg-color);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -312,15 +316,17 @@
   gap: 10px;
   padding-top: 10px;
   padding-bottom: 10px;
-  width: calc(100% - 100px);
+  width: calc(100% - 80px);
   justify-content: end;
   align-items: center;
+  background-color: var(--sidebar-bg-color);
+
 }
 
 .resultsTableContainer {
   flex-grow: 1; /* Make it take the full height of the output section */
   max-width: 100%;
-  background-color: var(--sidebar-bg-color);
+  background-color: var(--editor-bg-color);
   padding: 15px;
   overflow: auto;
 }
@@ -342,7 +348,7 @@
 .resultsTable {
   width: 100%;
   border-collapse: collapse;
-  overflow-x: auto; /* Enables horizontal scrolling if needed */
+  overflow-x: auto;
 }
 
 .resultsTable th, 
@@ -350,13 +356,13 @@
   border: 1px solid var(--border-color);
   padding: 10px;
   text-align: left;
-  white-space: nowrap; /* Prevents text wrapping */
+  white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
 }
 
 .resultsTable th {
-  background-color: var(--background-color);
+  background-color: var(--sidebar-bg-color);
   font-weight: bold;
 }
 
